All of Bridget's edits are in

--- a/index.html
+++ b/index.html
@@ -643,7 +643,7 @@ s.src = document.location.protocol + '//d8rk54i4mohrb.cloudfront.net/js/reach.js
 					<div class="text-wrapper">
 						<h5>Point Reyes National Seashore</h5>
 						<p>Up for an adventure? First, buy some fresh oysters at the Marshall Store, rent a kayak at Blue Waters Kayaking, and load up your gear for a one-hour paddle to the boat-in only Tomales Bay campsites. After you set up camp on the beach, hike the steep hill for a breathtaking view of Tomales Bay.</p>
-						<p><span class="bold">What to do:</span> Check out Pierce Point Ranch, where you can catch a glimpse of the many tule elk in residence in residence at the Tule Elk Reserve.</p>
+						<p><span class="bold">What to do:</span> Check out Pierce Point Ranch, where you can catch a glimpse of the many tule elk in residence at the Tule Elk Reserve.</p>
 						<div class="caption">
 							<p class="italc cred">Yhelfman/Getty Images</p>
 						</div>
@@ -1196,7 +1196,7 @@ s.src = document.location.protocol + '//d8rk54i4mohrb.cloudfront.net/js/reach.js
 			<li class="hideContent">
 				<div class="text-box">
 					<p>Celebrating its 100th anniversary in 2016, the museum encourages adults and kids alike to reconnect with nature. Wear comfortable walking shoes on your visit—after gawking at the 74-foot blue whale skeleton, you can remind yourself that you're in subtropical California and head to the museum's backyard to play on the water course, build a fort, and search for critters. From there you can also hike the Nature Trail along Mission Creek.</p>
-					<p class="italc cred">Gary Robinson/Santa Barbara Museum of Natural History/p>
+					<p class="italc cred">Gary Robinson/Santa Barbara Museum of Natural History</p>
 				</div>
 			</li>
 		</ul>
@@ -1538,7 +1538,7 @@ s.src = document.location.protocol + '//d8rk54i4mohrb.cloudfront.net/js/reach.js
 			<div class="col-xs-6 col-md-6">
 				<h4>5</h4>
 				<h3>LEGOLAND</h3>
-				<p>A fun place for younger kids, especially those who love building! There are not only fun rides at LEGOLAND but building stations, a great waterpark, and Sea Life Aquarium adjacent to the park as well. It's fascinating what they've made out of LEGO® bricks!</p>
+				<p>A fun place for younger kids, especially those who love building! There are not only fun rides at LEGOLAND but building stations, a great waterpark, and Sea Life Aquarium adjacent to the park as well. It's fascinating what they've made out of LEGO<span class="superscript"><sup>&reg;</sup></span> bricks!</p>
 				<p class="italc">Let's move on to a few water locations we love in Southern California! Some of them you may have heard of, and others are hidden gems that are must-sees during your visit here.</p>
 				<h4>6</h4>
 				<h3>SeaWorld San Diego</h3>
@@ -1610,7 +1610,8 @@ s.src = document.location.protocol + '//d8rk54i4mohrb.cloudfront.net/js/reach.js
 			<div class="col-xs-5 col-md-5">
 				<div class="caption">
 					<img class="arrow rotate-left" src="assets/arrow.png">
-					<p>San Clemente pier. <span class="italc cred inline">Compassandcamera/Getty Images</span></p>
+					<p>San Clemente pier.<p>
+					<p class="italc cred">Compassandcamera/Getty Images</p>
 				</div>
 			</div>
 		</div>
@@ -1651,7 +1652,8 @@ s.src = document.location.protocol + '//d8rk54i4mohrb.cloudfront.net/js/reach.js
 			<div class="xs-display-none col-xs-5 col-xs-offset-1 col-md-5 col-md-offset-1">
 				<img class="sect-break under animateblock btm" src="images/justine/supplied_justine_6.jpg">
 				<div class="caption">
-					<p>Feeding the animals at Bates Nut Farm.<span class="italc cred inline">Courtesy of Justine Howell</span></p>
+					<p>Feeding the animals at Bates Nut Farm.</p>
+					<p class="italc cred">Courtesy of Justine Howell</p>
 				</div>
 			</div>
 		</div>
@@ -1768,7 +1770,7 @@ s.src = document.location.protocol + '//d8rk54i4mohrb.cloudfront.net/js/reach.js
 			<li class="hideContent">
 				<h4>LEGOLAND California</h4>
 				<div class="text-box">
-					<p>With over 60 rides, shows, a miniature golf course, hotel, and two water parks, LEGOLAND is hardly a vacation spot solely dedicated to plastic bricks. LEGO® fans can take in "The LEGO Movie 4D A New Adventure," scoot around in mini LEGO® cars, and even tour a LEGO® factory. Recently LEGOLAND unveiled LEGO® Ninjago Ride, an interactive attraction where you launch fireballs, shockwaves, and lightning bolts with your hands to defeat the Great Devourer and earn ninja status. Also be sure to check out Miniland USA, which recreates entire U.S. cities using millions of LEGO® bricks.</p>
+					<p>With over 60 rides, shows, a miniature golf course, hotel, and two water parks, LEGOLAND is hardly a vacation spot solely dedicated to plastic bricks. LEGO<span class="superscript"><sup>®</sup></span> fans can take in "The LEGO Movie 4D A New Adventure," scoot around in mini LEGO<span class="superscript"><sup>®</sup></span> cars, and even tour a LEGO<span class="superscript"><sup>®</sup></span> factory. Recently LEGOLAND unveiled LEGO<span class="superscript"><sup>®</sup></span> Ninjago Ride, an interactive attraction where you launch fireballs, shockwaves, and lightning bolts with your hands to defeat the Great Devourer and earn ninja status. Also be sure to check out Miniland USA, which recreates entire U.S. cities using millions of LEGO<span class="superscript"><sup>®</sup></span> bricks.</p>
 					<p class="italc cred">Courtesy of LEGOLAND California Resort</p>
 				</div>
 			</li>
@@ -1795,7 +1797,7 @@ s.src = document.location.protocol + '//d8rk54i4mohrb.cloudfront.net/js/reach.js
 				<h4>Raging Waters, Los Angeles</h4>
 				<div class="text-box">
 					<p>Raging Waters is California's largest water theme park and features gallons of rides, slides, children's activity pools, and obstacle courses. The park's latest attraction is the Aqua Rocket, the country's first hydro-magnetic coaster that takes four people at a time on a high-thrills water ride. There's also Neptune's Fury, a 600-foot ride that plunges a four-man raft into total darkness down a 60-foot drop at 30 mph. When you want to unwind from an action-packed day, grab a raft and float lazily down the Amazon Adventure River.</p>
-					<p class="italc cred">Tk</p>
+					<p class="italc cred">Courtesy of Raging Waters</p>
 				</div>
 			</li>
 		</ul>
@@ -1809,7 +1811,7 @@ s.src = document.location.protocol + '//d8rk54i4mohrb.cloudfront.net/js/reach.js
 				<div class="text-box">
 					<p>Discover the excitement of movie-making magic at one of Southern California's most legendary theme parks, set on the grounds of an active film and television studio. In addition to spine-tingling rides that land you in the center of scenes from movies, you can see where those films were made on Universal's famed Studio Tour. The new Wizarding World of Harry Potter™ lets you explore the magic of Hogwarts™ Castle, peruse the shops in Hogsmeade™, and experience heart-pounding Harry Potter–themed rides. Meanwhile, Springfield, which opened last year, lets you visit the town made famous in the hit animated series The Simpsons™. Grab a bite at Krusty Burger, and rocket through Krustyland on the popular Simpsons™ ride.</p>
 					<p><span class="italc">HARRY POTTER characters, names and related indicia are &copy; &amp; ™ Warner Bros. Entertainment Inc. Harry Potter Publishing Rights © JKR. (s16) © 2016 Universal Studios. All rights reserved.</span>
-					<p class="italc cred">Tk</p>
+					<p class="italc cred">TBD – Exact Language TK</p>
 					</p>
 				</div>
 			</li>
