--- a/index.html
+++ b/index.html
@@ -706,12 +706,15 @@ s.src = document.location.protocol + '//d8rk54i4mohrb.cloudfront.net/js/reach.js
 				</div>
 			</div>
 		</div>
-		<div class="row tout">
-			<div class="col-xs-12 col-md-8 col-md-offset-2">
-				<p>Check out eight more spots for adventurous kids <a href="http://www.visitcalifornia.com/feature/8-great-spots-take-adventurous-daughter" target="_blank">here</a>.</p>
-				<img src="assets/CA Logo_Dream Big_Color.png" class="vca-logo-color">
-			</div>
+	</div>
+	<div class="tout clearfix">
+		<div class="vca-tout-text-wrap">
+			<p>Check out eight more spots for adventurous kids <a href="http://www.visitcalifornia.com/feature/8-great-spots-take-adventurous-daughter" target="_blank">here</a>.</p>
 		</div>
+		<div class="vca-tout-logo-wrap">
+			<img src="assets/VCA_white_gold.png" class="vca-logo-color">
+		</div>
+	</div>
 </section>
 
 <!-- PHOTO OP -->
@@ -1381,6 +1384,14 @@ s.src = document.location.protocol + '//d8rk54i4mohrb.cloudfront.net/js/reach.js
 			</li>
 		</ul>
 	</a>
+	<div class="tout clearfix">
+		<div class="vca-tout-text-wrap">
+			<p>Unwind after a day of exploring at one of these <a href="http://www.visitcalifornia.com/feature/9-family-friendly-wineries-craft-breweries" target="_blank">family-friendly wineries and craft breweries</a>.</p>
+		</div>
+		<div class="vca-tout-logo-wrap">
+			<img src="assets/VCA_white_gold.png" class="vca-logo-color">
+		</div>
+	</div>
 </section>
 
 <!-- #EEATS -->
@@ -1994,6 +2005,14 @@ s.src = document.location.protocol + '//d8rk54i4mohrb.cloudfront.net/js/reach.js
 			</li>
 		</ul>
 	</a>
+	<div class="tout clearfix">
+		<div class="vca-tout-text-wrap">
+			<p>After a day of fun in the sun, rest up at one of these <a href="http://www.visitcalifornia.com/feature/8-great-spots-take-adventurous-daughter" target="_blank">kid-friendly places to stay</a>.</p>
+		</div>
+		<div class="vca-tout-logo-wrap">
+			<img src="assets/VCA_white_gold.png" class="vca-logo-color">
+		</div>
+	</div>
 </section>
 
 <!-- BELLA VIDEO -->
