Fix header responsiveness

--- a/index.html
+++ b/index.html
@@ -79,8 +79,10 @@ s.src = document.location.protocol + '//d8rk54i4mohrb.cloudfront.net/js/reach.js
 </section>
 
 <section class="hero full-page" id="main-hero">
-	<div class="parralax-credit"><p>J. Andruckow/Getty Images</p></div>
-	<img src="images/title-svg-logo.svg" class="main-title">
+	<div class="height-wrap">
+		<div class="parralax-credit"><p>J. Andruckow/Getty Images</p></div>
+		<img src="images/title-svg-logo.svg" class="main-title">
+	</div>
 	<div class="title-trtmnt-mob">
 		<h1>State of Play</h1>
 		<h2>Discover why a trip to California makes the ultimate family vacation. Explore Northern, Central, and Southern California's places to play.</h2>
