Title treatment FIXED
JS resolved to find true height of main hero section minus the TOC

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@ s.src = document.location.protocol + '//d8rk54i4mohrb.cloudfront.net/js/reach.js
 	</div>
 </section>
 
-<section class="hero full-page" id="main-hero">
+<section class="hero main-full-page" id="main-hero">
 	<div class="height-wrap">
 		<div class="parralax-credit"><p>J. Andruckow/Getty Images</p></div>
 		<img src="images/title-svg-logo.svg" class="main-title">
