Some small caption edits made

--- a/index.html
+++ b/index.html
@@ -1823,9 +1823,7 @@ s.src = document.location.protocol + '//d8rk54i4mohrb.cloudfront.net/js/reach.js
 				<h4>Universal Studios Hollywood</h4>
 				<div class="text-box">
 					<p>Discover the excitement of movie-making magic at one of Southern California's most legendary theme parks, set on the grounds of an active film and television studio. In addition to spine-tingling rides that land you in the center of scenes from movies, you can see where those films were made on Universal's famed Studio Tour. The new Wizarding World of Harry Potter™ lets you explore the magic of Hogwarts™ Castle, peruse the shops in Hogsmeade™, and experience heart-pounding Harry Potter–themed rides. Meanwhile, Springfield, which opened last year, lets you visit the town made famous in the hit animated series The Simpsons™. Grab a bite at Krusty Burger, and rocket through Krustyland on the popular Simpsons™ ride.</p>
-					<p><span class="italc">HARRY POTTER characters, names and related indicia are &copy; &amp; ™ Warner Bros. Entertainment Inc. Harry Potter Publishing Rights © JKR. (s16) © 2016 Universal Studios. All rights reserved.</span>
-					<p class="italc cred">TBD – Exact Language TK</p>
-					</p>
+					<p class="italc cred">HARRY POTTER characters, names and related indicia are &copy; &amp; ™ Warner Bros. Entertainment Inc. Harry Potter Publishing Rights © JKR. (s16) © 2016 Universal Studios. All rights reserved.</p>
 				</div>
 			</li>
 		</ul>
