--- a/index.html
+++ b/index.html
@@ -1846,8 +1846,74 @@ s.src = document.location.protocol + '//d8rk54i4mohrb.cloudfront.net/js/reach.js
 			</div>
 		</div>
 	</div>
-	<div class="container-fluid article">
-		<div class="row surf-skate-wrap" id="surf-bg">
+	<div class="surf-skate-wrap" id="surf-bg">
+		<div class="caption parralax-credit">
+			<p><span class="italc cred">Peathegee Inc./Getty Images</span></p>
+		</div>
+		<div class="mobile-surf">
+			<p>In The Water</p>
+		</div>
+		<div class="container-fluid article">
+			<div class="col-md-6 col-md-offset-1">
+				<div class="scroll-list-box">
+					<div class="box-header">
+						<span class="best-for">Best for:</span>
+						</br>Wave newbies					
+					</div>
+					<p>The small waves and lack of rocks at Bolsa Chica State Beach make the <span class="bold">Huntington Beach Surf Camp</span> a safe, kid-friendly option for learning how to catch a wave. With a four-to-one student-to-teacher ratio, your son or daughter will get personalized attention during a week of 9 a.m. to 3 p.m. full-day sessions (half days also available). Head over to Main Street for the grilled fish taco from Wahoo's Fish Taco and wander through the surf shops and boutiques before picking your camper up at the end of the day.</p>
+				</div>
+				<div class="scroll-list-box">
+					<div class="box-header">
+						<span class="best-for">Best for:</span>
+						</br>A fun, relaxed atmosphere	
+					</div>
+					<p>Choose your ideal vacation location when signing your kids up for the <span class="bold">Perfect Day Surf Camp</span> at Santa Monica, Manhattan, Redondo, or Torrance Beaches. The camps offer flexible times and keep things fun by integrating beach dodgeball, capture the flag, and sandcastle time for the little ones. Each camp is located near the coastal bike path for riding or walking to beachfront restaurants. Or you could take a stand-up paddleboarding or surfing class while the kids catch waves.</p>
+				</div>
+				<div class="scroll-list-box">
+					<div class="box-header">
+						<span class="best-for">Best for:</span>
+						</br>The whole family 			
+					</div>
+					<p><span class="bold">Menehune Surf</span> in La Jolla or Del Mar serves up half- or full-day instruction. Youngsters (ages five to seven) start by playing in the shallow water and learning about the marine life, while the eight- to twelve-year-olds develop skills and learn about ocean ecosystems, and the teens focus on skills, etiquette, and learning about surf culture and how boards are designed. While the kids catch waves, parents can treat themselves to a sea stone massage or deep cleansing facial at L'Auberge in Del Mar.</p>
+				</div>
+			</div>
+		</div>
+	</div>
+	<div class="surf-skate-wrap" id="skate-bg">
+		<div class="caption parralax-credit">
+			<p><span class="italc cred">Tetra Images/Offset</span></p>
+		</div>
+		<div class="mobile-skate">
+			<p>On Land</p>
+		</div>
+		<div class="container-fluid article">
+			<div class="col-md-6 col-md-offset-1">
+				<div class="scroll-list-box">
+					<div class="box-header">
+						<span class="best-for">Best for:</span>
+						</br>Flexible instruction
+					</div>
+					<p>Pick a Southern California destination from Irvine to Long Beach and it's likely that <span class="bold">Skatedog</span> has a camp location there. Summer camp sessions, run through the local Parks and Recreation Departments, teach kids ages six to 13 how to skate using ramps and rails from Skatedog's mobile skate park. Camp spots are located near attractions like the historic <span class="italc">Queen Mary</span> in Long Beach or the upscale, open-air Fashion Island in Newport Beach.</p>
+				</div>
+				<div class="scroll-list-box">
+					<div class="box-header">
+						<span class="best-for">Best for:</span>
+						</br>Advanced tricksters
+					</div>
+					<p>The legendary skate park at the <span class="bold">Magdalena Ecke YMCA</span> in Encinitas features a combination of street course, kidney-shaped bowl, and mix of ramp styles. It hosts three camps based on ability level: Technique for beginners, a tricks-focused intermediate/advanced camp, and a travel camp that takes skaters to other parks around San Diego. Parents can stay entertained in the quaint beachside town of Encinitas—simply relax on Moonlight Beach or grab a cup of house-roasted coffee at Lofty Coffee Co. and walk south down the 101 to browse gift shops and boutiques.</p>
+				</div>
+				<div class="scroll-list-box">
+					<div class="box-header">
+						<span class="best-for">Best for:</span>
+						</br>Multimedia skaters
+					</div>
+					<p>If you mastered tricks at skateboard camp but don't have it on video, did it really happen? For kids 10 and up, the <span class="bold">Etnies Video Production Skate Camp</span> in Lake Forest combines videography and photography with skateboarding during a weeklong camp. Etnies also offers a preschool skate camp for 4- and 5-year-olds. Lake Forest is just inland of Laguna Beach, where there are more than 100 galleries, sculpture gardens, and art studios within walking distance.</p>
+				</div>
+			</div>
+		</div>
+	</div>
+	<!-- <div class="container-fluid article">
+		<div class="surf-skate-wrap" id="surf-bg">
 			<div class="mobile-surf">
 				<p>In The Water</p>
 			</div>
@@ -1878,7 +1944,7 @@ s.src = document.location.protocol + '//d8rk54i4mohrb.cloudfront.net/js/reach.js
 				</div>
 			</div>
 		</div>
-		<div class="row surf-skate-wrap" id="skate-bg">
+		<div class="surf-skate-wrap" id="skate-bg">
 			<div class="mobile-skate">
 				<p>On Land</p>
 			</div>
@@ -1909,7 +1975,7 @@ s.src = document.location.protocol + '//d8rk54i4mohrb.cloudfront.net/js/reach.js
 				</div>
 			</div>
 		</div>
-	</div>
+	</div> -->
 </section>
 
 <!-- Kid Beaches -->
