New analytics added

--- a/index.html
+++ b/index.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 
+<!--MOAT-->
+<script type="text/javascript">(function(){var a=document,b=a.createElement("script"),a=a.getElementsByTagName("script")[0];b.type="text/javascript";b.async=!0;b.src="http://s.moatads.com/timeinccontent436vGWy49/moatcontent.js";a.parentNode.insertBefore(b,a)})();</script>
+<!--MOAT-->
+
+
+<!-- Simple Reach -->
 <script>
 __reach_config = {
 ///pid: '544976bee79548dcfd0001e9',
@@ -19,9 +25,21 @@ s.src = document.location.protocol + '//d8rk54i4mohrb.cloudfront.net/js/reach.js
 (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(s);
 })();
 </script>
+<!-- Simple Reach -->
 
-<script type="text/javascript">(function(){var a=document,b=a.createElement("script"),a=a.getElementsByTagName("script")[0];b.type="text/javascript";b.async=!0;b.src="http://s.moatads.com/timeinccontent436vGWy49/moatcontent.js";a.parentNode.insertBefore(b,a)})(); 
+
+<!-- Begin Tealium Integration -->
+<script type="text/javascript">
+var utag_data = {"channel":"people","site_display_format":"desktop","page_name":"State of Play","site_section1":"native","site_section2":"visit california","template_type":"microsite"};
 </script>
+<script type="text/javascript">
+(function(a,b,c,d){
+a='//tags.tiqcdn.com/utag/timeinc/people.com/prod/utag.js';
+b=document;c='script';d=b.createElement(c);d.src=a;d.type='text/java'+c;d.async=true;
+ a=b.getElementsByTagName(c)[0];a.parentNode.insertBefore(d,a);
+})();
+</script>
+<!-- End Tealium Integration -->
 
 <head>
 	<meta charset="utf-8">
