Some progress made on reworking article road trip

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@ b=document;c='script';d=b.createElement(c);d.src=a;d.type='text/java'+c;d.async=
 	</div>
 </section>
 
-<section class="hero main-full-page" id="main-hero">
+<section class="hero main-full-page mobile-hero" id="main-hero">
 	<div class="height-wrap">
 		<div class="parralax-credit"><p>J. Andruckow/Getty Images</p></div>
 		<img src="images/title-svg-logo.svg" class="main-title">
@@ -818,7 +818,101 @@ b=document;c='script';d=b.createElement(c);d.src=a;d.type='text/java'+c;d.async=
 			</div>
 		</div>
 	</div>
-	<div class="container-fluid article">
+	<div class="roadtrip-container">
+			<ul class="scroll-list">
+				<li class="parallax-bg__empty full-page" id="list-roadtrip">
+					<div class="container-fluid article">
+						<div class="circle-container" id="roadtrip-circle-1">
+							<div class="roadtrip-circle circle-bg-1 circle-bg-1a circle-bg-1b circle-bg-1c circle-bg-2 circle-bg-3 circle-bg-4 circle-bg-5 circle-bg-6"></div>
+						</div>
+						<div class="row clearfix">
+							<div class="col-md-6">
+								<div class="scroll-list-box">
+									<div class="box-header">
+										<div class="box-header-num">1</div>
+										<span class="stop-name">First Stop:</br>Phillipsville</span>
+									</div>
+									<p>Before you set out, fuel up on grass-fed-beef burgers, fresh baked goods, and soft-serve ice cream at the whimsical Chimney Tree Grill in the town of Phillipsville. The restaurant is next to the Living Chimney Tree, which was hollowed by a fire in 1914. Visitors can walk into the room-like space, entering through a front door, to check out the tree's interior.</p>
+								</div>
+							</div>
+						</div>
+					</div>
+				</li>
+				<li class="parallax-bg__myers full-page" id="roadtrip-2">
+					<div class="container-fluid article">
+						<div class="caption parralax-credit">
+							<p><span class="italc cred">Gary Crabbe/Getty Images</span></p>
+						</div>
+						<div class="row clearfix">
+							<div class="col-md-6"> 
+								<div class="scroll-list-box">
+									<div class="box-header">
+										<div class="box-header-num">2</div>
+										<span class="stop-name">Myers Flat and</br>the Shrine Tree</span>
+									</div>
+									<p>There are three redwoods you can drive a car through in California. The Shrine Drive-Through Tree has the distinction of being the only one hollowed out by nature. Goose pens, as these interior spaces are known, are caused by fires, which burn out the interior of the tree but leave the exterior intact <span class="italc">and</span> alive. You'll pay a small fee to pass through this privately owned redwood. Stop off in Myers Flat for the locally lauded Daily Grind espresso house or a visit to Riverbend Cellars for a laid back local wine tasting. If you have young kids, venture a mile farther to the Williams Grove day use area where you'll access the Children's Forest trail. This quiet, pretty 2-mile loop has plenty of fun exploration opportunities for little ones.</p>
+								</div>
+							</div>
+						</div>
+					</div>
+				</li>
+				<li class="parallax-bg__empty full-page" id="roadtrip-3">
+					<div class="col-md-6">
+						<div class="scroll-list-box">
+							<div class="box-header">
+								<div class="box-header-num">3</div>
+								<span class="stop-name">The Humboldt Redwoods</br>State Park Visitor's Center</span>
+							</div>
+							<p>This retro, 1930s visitor's center near the town of Weott is both kitschy and educational. Three of the world's remaining redwood species have been planted out front. Inside there's a substantial history museum, as well as the world's first RV, carved from a redwood trunk, which the owner drove around the country from 1917 to 1921 to raise awareness of the forests.</p>
+						</div>
+					</div>
+				</li>
+				<li class="parallax-bg__founders-grove full-page" id="roadtrip-4">
+					<div class="caption parralax-credit">
+						<p><span class="italc cred">Noppawat Tom Charoensinphon/Getty Images</span></p>
+					</div>
+					<div class="col-md-6">
+						<div class="scroll-list-box">
+							<div class="box-header one-line">
+								<div class="box-header-num">4</div>
+								<span class="stop-name">Founder's Grove</span>
+							</div>
+							<p>Stop to explore the Dyerville Giant—estimated to be the world's tallest tree when it toppled 25 years ago. When it crashed, people in the area thought there had been a train accident because of the explosive reverberation. It's now a great opportunity to see a redwood root system, and there's plenty of signage to learn about the forest.</p>
+						</div>
+					</div>
+				</li>
+				<li class="parallax-bg__empty full-page" id="last-roadtrip">
+					<div class="col-md-6">
+						<div class="scroll-list-box">
+							<div class="box-header one-line">
+								<div class="box-header-num">5</div>
+								<span class="stop-name">The Grieg-French-Bell Grove</span>
+							</div>
+							<p>Fairytale lovers will marvel at this grove, most famous for the redwood sorrel ground cover. The dense, bright green foliage resembles four-leaf clovers, and it blankets the forest floor, rising and falling with the terrain. Pathways twist and turn among the trees in an incredible enchanted setting.</p>
+						</div>
+					</div>
+				</li>
+				<li class="parallax-bg__eternal-tree-house full-page">
+					<div class="caption parralax-credit">
+						<p><span class="italc cred">Brad Wenner/Getty Images</span></p>
+					</div>
+					<div class="col-md-6">
+						<div class="scroll-list-box">
+							<div class="box-header one-line">
+								<div class="box-header-num">6</div>
+								<span class="stop-name">Eternal Tree House</span>
+							</div>
+							<p>About eight miles south of the Stafford end of the Avenue of the Giants sits the Eternal Tree House, a rustic roadside stop with a gift shop, restaurant, and a 20-square foot room located in the stump of one of the giants. Visitors to the house can leave their name in the guestbook before going back on the road.</p>
+						</div>
+					</div>
+					<div class="circle-container" id="roadtrip-circle-2">
+						<div class="roadtrip-circle" id="last-circle"></div>
+					</div>
+				</li>
+			</ul>
+		</div>
+	</div>
+	<!-- <div class="container-fluid article">
 		<div class="row">
 			<div class="col-md-12">
 				<ul class="scroll-list">
@@ -906,7 +1000,7 @@ b=document;c='script';d=b.createElement(c);d.src=a;d.type='text/java'+c;d.async=
 				</ul>		
 			</div>
 		</div>
-	</div>
+	</div> -->
 </section>
 
 <!-- KID ATTRACTIONS -->
