--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@ b=document;c='script';d=b.createElement(c);d.src=a;d.type='text/java'+c;d.async=
 <script src="js/jquery-1.12.0.min.js"></script>
 <script src="js/script.js"></script>
 <script type="text/javascript" src="js/jquery.fancybox.pack.js"></script>
+<script type="text/javascript" src="js/jquery.lazyload.min.js"></script>
 
 <section id="legal-header">
 	<p>Paid Content from <a href="http://www.visitcalifornia.com/california-family" target="_blank"><span class="bold">Visit California</span></a><img src="assets/info.gif" class="info"></p>
