Added link to the footer
And some design tweaks to the disclaimer

--- a/index.html
+++ b/index.html
@@ -2225,19 +2225,19 @@ $(function() {
 	</div>
 </section>
 
-<div class="container-fluid article" id="photo-disclaimer">
-	<div class="row">
-		<div class="col-md-12">				
-			<p>Some photographs in this content are used for illustrative purposes only.</p>
-		</div>
-	</div>
+<div class="italc" id="photo-disclaimer">			
+	<p class="cred">Some photographs in this content are used for illustrative purposes only.</p>
 </div>
 
 <section id="footer">
 	<ul>
-		<li><a href="https://subscription.timeinc.com/storefront/privacy/people/generic_privacy_new.html?dnp-source=E" target="_blank">Privacy Policy</a></li>
+		<li><a href="https://subscription.timeinc.com/storefront/privacy/people/generic_privacy_new.html?dnp-source=E" target="_blank">People Privacy Policy</a></li>
+		<li><span class="dvdr">|</span></li>
 		<li><a href="https://subscription.timeinc.com/storefront/privacy/people/generic_privacy_new.html?dnp-source=B#california" target="_blank">Your California Privacy Rights</a></li>
+		<li><span class="dvdr">|</span></li>
 		<li><a href="https://subscription.timeinc.com/storefront/privacy/people/privacy_terms_service.html" target="_blank">Terms of Service</a></li>
+		<li><span class="dvdr">|</span></li>
+		<li><a href="http://www.visitcalifornia.com/privacy-policy" target="_blank">Visit California Privacy Policy</a></li>
 	</ul>
 </section>
 
