Some lazy loading added
All but Southern

--- a/index.html
+++ b/index.html
@@ -484,7 +484,7 @@ $(function() {
 				<p>When you get your second wind, take the family to Shorebird Park Nature Center and Adventure Playground for another interesting experience.  A quintessentially Berkeley attraction, this park is unlike any playground you've ever been to. There's a zip line that kids and adults can ride on, and opportunities for children to build things with real hammers and nails, and to use paint to decorate their very own fort. The Shorebird Park Nature Center and Adventure Playground might be your kiddo's favorite part of the entire day!</p>
 			</div>
 			<div class="xs-display-none col-xs-5 col-xs-offset-1 col-md-5 col-md-offset-1">
-				<img class="sect-break under animateblock btm" src="images/brandi/Brandi2.jpg">
+				<img class="lazy sect-break under animateblock btm" data-original="images/brandi/Brandi2.jpg" width="2000" height="1000">
 			</div>
 		</div>
 		<div class="row">
@@ -499,7 +499,7 @@ $(function() {
 		<div class="container-fluid article blogger-post">
 			<div class="row">
 				<div class="col-xs-7 col-md-7">
-					<img class="over animateblock btm" src="images/brandi/Brandi4.jpg">
+					<img class="lazy over animateblock btm" data-original="images/brandi/Brandi4.jpg" width="2000" height="1000">
 				</div>
 				<div class="col-xs-5 col-md-5">
 					<div class="caption">
@@ -525,7 +525,7 @@ $(function() {
 					<h5>Sausalito</h5>
 				</div>
 				<div class="xs-display-none col-md-5 col-xs-5 col-xs-offset-1 col-md-offset-1">
-					<img class="sect-break under animateblock btm" src="images/brandi/Brandi3.jpg">
+					<img class="lazy sect-break under animateblock btm" data-original="images/brandi/Brandi3.jpg" width="2000" height="1000">
 				</div>
 			</div>
 			<div class="row">
@@ -541,7 +541,7 @@ $(function() {
 					<p>If you are coming to Northern California and you only have a few days, you MUST go to Yosemite National Park. It's about a 2.5-hour drive from Oakland, so if you start early in the morning, you'll have plenty of time to explore. One of the greatest parks in our country, Yosemite is absolutely breathtaking. When you and your family experience the amazing valley and beautiful waterfalls, you'll be reminded of how beautiful our country truly is.</p>
 				</div>
 				<div class="xs-display-none col-xs-5 col-xs-offset-1 col-md-5 col-md-offset-1">
-					<img class="animateblock btm" src="images/brandi/Supplied-Brandi5.jpg">
+					<img class="lazy animateblock btm" data-original="images/brandi/Supplied-Brandi5.jpg" width="2000" height="1000">
 					<div class="caption">
 						<p>A sunset snap at Treasure Island.</p>
 						<p class="italc cred">Courtesy of Brandi Riley</p>
@@ -550,7 +550,7 @@ $(function() {
 			</div>
 			<div class="row">
 				<div class="col-xs-7 col-md-7">
-					<img class="over animateblock btm" src="images/brandi/yosemite.jpg">
+					<img class="lazy over animateblock btm" data-original="images/brandi/yosemite.jpg" width="2000" height="1000">
 					<div class="caption">
 						<p class="italc cred inline">Csondy/Getty Images</p>
 					</div>
@@ -610,7 +610,7 @@ $(function() {
 		</div>
 		<div class="row">
 			<div class="col-sm-12 col-md-6 col-md-offset-6 animateblock btm">
-				<a class="fancybox" href="images/camp-ca/steep-ravine.jpg"><img src="images/camp-ca/steep-ravine.jpg"></a>
+				<a class="fancybox" href="images/camp-ca/steep-ravine.jpg"><img class="lazy" data-original="images/camp-ca/steep-ravine.jpg" width="2000" height="1000"></a>
 			</div>
 		</div>
 		<div class="row">
@@ -633,7 +633,7 @@ $(function() {
 		</div>
 		<div class="row">
 			<div class="col-xs-12 col-md-6 col-md-offset-6 animateblock btm">
-				<a class="fancybox" href="images/camp-ca/mackerricher.jpg"><img src="images/camp-ca/mackerricher.jpg"></a>
+				<a class="fancybox" href="images/camp-ca/mackerricher.jpg"><img class="lazy" data-original="images/camp-ca/mackerricher.jpg" width="2000" height="1000"></a>
 			</div>
 		</div>
 		<div class="row">
@@ -656,7 +656,7 @@ $(function() {
 		</div>
 		<div class="row">
 			<div class="col-xs-12 col-md-6 col-md-offset-6 animateblock btm">
-				<a class="fancybox" href="images/camp-ca/beach.jpg"><img src="images/camp-ca/beach.jpg"></a>
+				<a class="fancybox" href="images/camp-ca/beach.jpg"><img class="lazy" data-original="images/camp-ca/beach.jpg" width="2000" height="1000"></a>
 			</div>
 		</div>
 		<div class="row">
@@ -679,7 +679,7 @@ $(function() {
 		</div>
 		<div class="row">
 			<div class="col-xs-12 col-md-6 col-md-offset-6 animateblock btm">
-				<a class="fancybox" href="images/camp-ca/tomales.jpg"><img src="images/camp-ca/tomales.jpg"></a>
+				<a class="fancybox" href="images/camp-ca/tomales.jpg"><img class="lazy" data-original="images/camp-ca/tomales.jpg" width="2000" height="1000"></a>
 			</div>
 		</div>
 		<div class="row">
@@ -703,7 +703,7 @@ $(function() {
 		<div class="row">
 			<div class="col-xs-12 col-md-6 col-md-offset-6">
 				<div class="animateblock btm">
-					<a class="fancybox" href="images/camp-ca/sequoia.jpg"><img src="images/camp-ca/sequoia.jpg"></a>
+					<a class="fancybox" href="images/camp-ca/sequoia.jpg"><img class="lazy" data-original="images/camp-ca/sequoia.jpg" width="2000" height="1000"></a>
 				</div>
 			</div>
 		</div>
@@ -728,7 +728,7 @@ $(function() {
 		<div class="row">
 			<div class="col-xs-12 col-md-6 col-md-offset-6">
 				<div class="animateblock btm">
-					<a class="fancybox" href="images/camp-ca/bigbasin.jpg"><img src="images/camp-ca/bigbasin.jpg"></a>
+					<a class="fancybox" href="images/camp-ca/bigbasin.jpg"><img class="lazy" data-original="images/camp-ca/bigbasin.jpg" width="2000" height="1000"></a>
 				</div>
 			</div>
 		</div>
@@ -1194,7 +1194,7 @@ $(function() {
 				<p>About an hour away from Santa Barbara is a quaint little town called Solvang. Driving into Solvang will make you feel as though you're stepping back in time. You will immediately get the small-town feel (it has a population of about 5,500) as you drive down its one major road and past its mom-and-pop shops and well-known bakeries. Founded by a group of Danes in 1911, the town gives you the feeling that it hasn't changed much since then.</p>
 			</div>
 			<div class="xs-display-none col-xs-5 col-xs-offset-1 col-md-5 col-md-offset-1">
-				<img class="animateblock btm" src="images/pattie/visiting-oceanside.jpg">
+				<img class="lazy animateblock btm" data-original="images/pattie/visiting-oceanside.jpg" width="2000" height="1000">
 				<div class="caption">
 					<p>Pattie and her crew strike a pose on a jetty.
 					</br><span class="italc cred inline no-left-margin">Courtesy of Pattie Cordova</span></p>
@@ -1203,7 +1203,7 @@ $(function() {
 		</div>
 		<div class="row">
 			<div class="col-xs-7 col-md-7">
-				<img class="over animateblock btm" src="images/pattie/solvang.jpg">
+				<img class="lazy over animateblock btm" data-original="images/pattie/solvang.jpg" width="2000" height="1000">
 			</div>
 			<div class="col-xs-5 col-md-5">
 				<div class="caption">
@@ -1227,7 +1227,7 @@ $(function() {
 		</div>
 		<div class="row">
 			<div class="col-xs-7 col-md-7">
-				<img class="over animateblock btm" src="images/pattie/central-valley.jpg">
+				<img class="lazy over animateblock btm" data-original="images/pattie/central-valley.jpg" width="2000" height="1000">
 			</div>
 			<div class="col-xs-5 col-md-5">
 				<div class="caption">
@@ -1247,7 +1247,7 @@ $(function() {
 				<p>Central California is a wonderful region of the Golden State, with the ocean and mountains surrounding the family-owned farms and quaint towns that you'll run into simply by driving down the scenic highways. Families can always find something that they enjoy doing. Whether we choose a day at the beach, a tour of historic missions, or fruit picking at a farm, Central California will give us three days of fun, great meals, and bonding moments that will carry us into our future California travels.</p>
 			</div>
 			<div class="col-xs-5 col-xs-offset-1 col-md-5 col-md-offset-1">
-				<img class="sect-break under animateblock btm" src="images/pattie/supplied_pattie_2.jpg">
+				<img class="lazy sect-break under animateblock btm" data-original="images/pattie/supplied_pattie_2.jpg" width="2000" height="1000">
 			</div>
 		</div>
 	</div>
@@ -1366,7 +1366,7 @@ $(function() {
 				<p>Hop back in the car and snake up the coast, passing historic and charming San Luis Obispo, stopping for a California history lesson at the Old Mission San Luis Obispo de Tolosa. Then veer onto The Pacific Coast Highway (Highway 1, or PCH as locals call it). Designate a family member as a photographer to capture the views.</p>
 			</div>
 			<div class="col-xs-5 col-md-5 col-md-offset-1">
-				<img class="animateblock btm" src="images/meet-cca/meet-cca1.jpg">
+				<img class="lazy animateblock btm" data-original="images/meet-cca/meet-cca1.jpg" width="2000" height="1000">
 				<div class="caption">
 					<p>Take a stroll in historic Santa Barbara.</p>
 					<p class="italc cred inline no-left-margin">Sashahaltam/Shutterstock</p>
@@ -1375,7 +1375,7 @@ $(function() {
 		</div>
 		<div class="row">
 			<div class="xs-display-none col-xs-7 col-md-7">
-				<img class="over animateblock btm" src="images/meet-cca/meet-cca2.jpg">
+				<img class="lazy over animateblock btm" data-original="images/meet-cca/meet-cca2.jpg" width="2000" height="1000">
 			</div>
 			<div class="xs-display-none col-xs-5 col-md-5">
 				<div class="caption">
@@ -1397,12 +1397,12 @@ $(function() {
 				<p>One cannot cruise up the PCH without stopping in Santa Cruz. Kids will love a trip to the Santa Cruz Beach Boardwalk, an amusement park (complete with the wooden Giant Dipper roller coaster, which first rolled out in 1924).</p>
 			</div>
 			<div class="xs-display-none col-xs-5 col-xs-offset-1 col-md-5 col-md-offset-1">
-				<img class="sect-break under animateblock btm" src="images/meet-cca/meet-cca3.jpg">
+				<img class="lazy sect-break under animateblock btm" data-original="images/meet-cca/meet-cca3.jpg" width="2000" height="1000">
 			</div>
 		</div>
 		<div class="row">
 			<div class="col-xs-12 col-md-9">
-				<img class="over animateblock btm" src="images/meet-cca/meet-cca4.jpg">
+				<img class="lazy over animateblock btm" data-original="images/meet-cca/meet-cca4.jpg" width="2000" height="1000">
 				<div class="caption">
 					<p class="italc cred inline">Chris Hendrickson/Getty Images</p>
 				</div>
@@ -1418,10 +1418,10 @@ $(function() {
 		</div>
 		<div class="row">
 			<div class="xs-display-none col-xs-7 col-md-7">
-				<img class="over animateblock btm" src="images/meet-cca/meet-cca6.jpg">
+				<img class="lazy over animateblock btm" data-original="images/meet-cca/meet-cca6.jpg" width="2000" height="1000">
 			</div>
 			<div class="col-xs-5 col-md-5 r-rail-above">
-				<img class="sect-break under animateblock btm" src="images/meet-cca/meet-cca5.jpg">
+				<img class="lazy sect-break under animateblock btm" data-original="images/meet-cca/meet-cca5.jpg" width="2000" height="1000">
 			</div>
 			<div class="xs-display-none col-xs-5 col-md-5">
 				<div class="caption">
@@ -1443,7 +1443,7 @@ $(function() {
 		</div>
 		<div class="row">
 			<div class="col-xs-12 col-md-9">
-				<img class="over animateblock btm" src="images/meet-cca/meet-cca7.jpg">
+				<img class="lazy over animateblock btm" data-original="images/meet-cca/meet-cca7.jpg" width="2000" height="1000">
 				<div class="caption">
 					<p>Visit a different kind of beach, with cool rocks to boot, at Mono Lake.</p>
 					<p class="italc cred inline no-left-margin">Alan Levenson/Getty Images</p>
@@ -1560,7 +1560,7 @@ $(function() {
 		</div>
 		<div class="row">
 			<div class="col-md-6 col-md-offset-6 animateblock btm">
-				<img class="img-responsive" src="images/eats/berries.png">
+				<img class="lazy img-responsive" data-original="images/eats/berries.png" width="2000" height="1000">
 			</div>
 		</div>
 		<div class="row">
@@ -1580,7 +1580,7 @@ $(function() {
 		</div>
 		<div class="row">
 			<div class="col-md-6 col-md-offset-6 animateblock btm">
-				<img class="img-responsive" src="images/eats/taco.png" id="taco">
+				<img class="lazy img-responsive" data-original="images/eats/taco.png" id="taco" width="2000" height="1000">
 			</div>
 		</div>
 		<div class="row">
@@ -1600,7 +1600,7 @@ $(function() {
 		</div>
 		<div class="row">
 			<div class="col-md-6 col-md-offset-6 animateblock btm">
-				<img class="img-responsive" src="images/eats/icecream.jpg">
+				<img class="lazy img-responsive" data-original="images/eats/icecream.jpg" width="2000" height="1000">
 			</div>
 		</div>
 	</div>
