--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@ $(function() {
 			</div>
 			<ul class="toc-menu">
 	  			<li class="nav-explore">EXPLORE</li>
-	  			<li class="toc-region">NORTHERN CALIFORNIA</li>
+	  			<li class="toc-region"><a href="#nca-hero">NORTHERN CALIFORNIA</li>
 	  			<li class="toc-blogger"><a href="#nrthrn-blog-post">
 	  				<div class="blogger-circle"></div>
 	  				<div class="toc-with">with</div></br>
@@ -148,7 +148,7 @@ $(function() {
 			</div>
 			<ul class="toc-menu">
 	  			<li class="nav-explore">EXPLORE</li>
-	  			<li class="toc-region">CENTRAL CALIFORNIA</li>
+	  			<li class="toc-region"><a href="#cca-hero">CENTRAL CALIFORNIA</li>
 	  			<li class="toc-blogger"><a href="#cntrl-blog-post">
 	  				<div class="blogger-circle"></div>
 	  				<div class="toc-with">with</div></br>
@@ -169,7 +169,7 @@ $(function() {
 			</div>
 			<ul class="toc-menu">
 	  			<li class="nav-explore">EXPLORE</li>
-	  			<li class="toc-region">SOUTHERN CALIFORNIA</li>
+	  			<li class="toc-region"><a href="#sca-hero">SOUTHERN CALIFORNIA</li>
 	  			<li class="toc-blogger"><a href="#sthrn-blog-post">
 	  				<div class="blogger-circle"></div>
 	  				<div class="toc-with">with</div></br>
@@ -194,7 +194,7 @@ $(function() {
 			</div>
 			<ul class="toc-menu">
 	  			<li class="nav-explore">EXPLORE</li>
-	  			<li class="toc-region">NORTHERN CALIFORNIA</li>
+	  			<a href="#nca-hero"><li class="toc-region"><a href="#nca-hero">NORTHERN CALIFORNIA</a></li>
 	  			<li class="toc-blogger"><a href="#nrthrn-blog-post">
 	  				<div class="blogger-circle"></div>
 	  				<div class="toc-with">with<br>
@@ -215,7 +215,7 @@ $(function() {
 			</div>
 			<ul class="toc-menu">
 	  			<li class="nav-explore">EXPLORE</li>
-	  			<li class="toc-region">CENTRAL CALIFORNIA</li>
+	  			<li class="toc-region"><a href="#cca-hero">CENTRAL CALIFORNIA</a></li>
 	  			<li class="toc-blogger"><a href="#cntrl-blog-post">
 	  				<div class="blogger-circle"></div>
 	  				<div class="toc-with">with</br>
@@ -236,7 +236,7 @@ $(function() {
 			</div>
 			<ul class="toc-menu">
 	  			<li class="nav-explore">EXPLORE</li>
-	  			<li class="toc-region">SOUTHERN CALIFORNIA</li>
+	  			<li class="toc-region"><a href="#sca-hero">SOUTHERN CALIFORNIA</li>
 	  			<li class="toc-blogger"><a href="#sthrn-blog-post">
 	  				<div class="blogger-circle"></div>
 	  				<div class="toc-with">with</br>
